--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -4,6 +4,7 @@
 @source "../../../apps/frontend/src/**/*.{js,ts,jsx,tsx,mdx}";
 @source "../../../packages/ui/src/**/*.{ts,tsx}";
 @source "../../../node_modules/@o2s/**/*.{js,ts,jsx,tsx}";
+@source "../../../packages/blocks/**/*.{js,ts,jsx,tsx,mdx}";
 
 @custom-variant dark (&:is(.dark *));
 @custom-variant hover (&:hover);
